--- a/index.html
+++ b/index.html
@@ -3096,7 +3096,24 @@
 </head>
 
 <body translate="no">
-        <video src="./93ecae882078f643636adf186ddcf6d5.mp4" width="100%" controls></video>
+        <div style="position: absolute;
+        top: 50%;
+        left: 50%;
+        min-width: 100%;
+        min-height: 100%;
+        width: auto;
+        height: auto;
+        z-index: -100;
+        -webkit-transform: translateX(-50%) translateY(-50%);
+        transform: translateX(-50%) translateY(-50%);
+        -webkit-transition: 1s opacity;
+        transition: 1s opacity;">
+                <video style="position: fixed;
+                width: 100%;
+                height: 100%;
+                overflow: hidden;
+                z-index: -100;	" src="./93ecae882078f643636adf186ddcf6d5.mp4" width="100%" autoplay muted loop></video>
+        </div>
         <!-- <iframe style="position: absolute;bottom: 10px;" frameborder="no" border="0" marginwidth="0" marginheight="0" width=530 height=160
                 src="https://music.163.com/outchain/player?type=2&id=1433496995&auto=1&height=66"></iframe> -->
                 <!-- <img style="width:200px;margin-bottom: 500px;" src="https://s3.bmp.ovh/imgs/2023/01/30/4f34a71f2761aff9.jpg" alt=""> -->
