--- a/index.html
+++ b/index.html
@@ -3095,13 +3095,7 @@
 
 </head>
 
-<body translate="no">>
-                <video style="position: fixed;
-                width: 100%;
-                height: 100%;" src="./93ecae882078f643636adf186ddcf6d5.mp4" width="100%" autoplay muted loop></video>
-        <!-- <iframe style="position: absolute;bottom: 10px;" frameborder="no" border="0" marginwidth="0" marginheight="0" width=530 height=160
-                src="https://music.163.com/outchain/player?type=2&id=1433496995&auto=1&height=66"></iframe> -->
-                <!-- <img style="width:200px;margin-bottom: 500px;" src="https://s3.bmp.ovh/imgs/2023/01/30/4f34a71f2761aff9.jpg" alt=""> -->
+<body translate="no">
         <div class="container">
                 <div class="cake">
                         <div class="tier tier-1">
@@ -3212,8 +3206,11 @@
 		}
 		var a = document.getElementById("showStr")
 		a.innerHTML = str.substring(0, index++);
-		},400)
+		},200)
         </script>
+        <video style="position: fixed;z-index: -10;
+        width: 100%;
+        height: 100%;" src="./93ecae882078f643636adf186ddcf6d5.mp4" width="100%" autoplay muted loop></video>
 </body>
 
 </html>
